articulation point in AuxiliarFunctions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ add_executable(AED2324_PRJ2_G1207
         main.cpp
         Airport.cpp
         Graph.cpp
-        Airlines.cpp)
+        Airlines.cpp
+        AuxiliarFunctions.cpp)
